--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,6 @@ HASH_SECRET = CHAVE-HASH-DE-SENHA
 
 ## CHAVE SECRETA JWT
 JWT_SECRET = MinhaChaveSuperSecretaJWT123!
+
+# URL de conexão com o banco de dados
+DATABASE_URL = "file:./dev.db"
