código finalizado e atualizado

--- a/.env.production
+++ b/.env.production
@@ -13,7 +13,7 @@ APP_SECRET = CHAVE-DA-APLICACAO-QUE-NAO-DEVE-SER-REVELADA-EM-PRODUCAO
 HASH_SECRET = CHAVE-HASH-DE-SENHA-PRODUCAO
 
 ## CHAVE SECRETA JWT
-JWT_SECRET = MinhaChaveSuperSecretaJWT123!
+JWT_SECRET = CHAVE-SECRETA_DO_JWT-PRODUCAO
 
 # URL de conexão com o banco de dados
 DATABASE_URL = "file:./dev.db"
