--- a/.env.development
+++ b/.env.development
@@ -13,7 +13,7 @@ APP_SECRET = CHAVE-DA-APLICACAO-QUE-NAO-DEVE-SER-REVELADA
 HASH_SECRET = CHAVE-HASH-DE-SENHA
 
 ## CHAVE SECRETA JWT
-JWT_SECRET = MinhaChaveSuperSecretaJWT123!
+JWT_SECRET = CHAVE-SECRETA_DO_JWT
 
 # URL de conexão com o banco de dados
 DATABASE_URL = "file:./dev.db"
